[tool.poetry]
name = "meandian"
version = "0.1.0"
description = ""
authors = ["rgerum <14153051+rgerum@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "meandian"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
numpy = "^1.24.2"
scipy = "^1.11.1"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
numba = "^0.57.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
hypothesis = "^6.82.0"
pylustrator = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"